--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,11 @@
     ],
     "require": {},
     "autoload": {
+        "files":
+            [
+                "config/settings.php"
+            ]
+        ,
         "psr-4": {
             "caconnect\\extslider\\": "src/"
         }
